# d2l-en-read

./: .gitignore  2-1-2.ipynb  2-1.ipynb  2-2-2.ipynb  2-2-2r.ipynb  2-3.md  2-4.ipynb  DCGAN-trainX.ipynb  INFO.md  Jenkinsfile  LICENSE  README.md  category.md  colab_clone.ipynb  config.ini  copyright.md  dcgan_pt4_share.ipynb  dcgan_switch.ipynb  index.md  install.md  n.md
.history/: 2-2_20200610213236.md  2-2_20200610213239.md  2-2_20200610214805.md  README_20200707142816.md  README_20200707142817.md  README_20200707143535.md  README_20200707143548.md  README_20200707144022.md  README_20200707144049.md  README_20200707144406.md  category_20200611135102.md  install_20200609224939.md  install_20200609224941.md
CV_SemSeg/: Dataset.md  FCN.md  U-Net.md  awesome.md  intro.md  mobile.md
CV_baseline/: BGR2HSW.md  CNN.md  Camera.md  Capsule.md  OpenCV.md  SENet.md  awesome.md
CV_obj/: ArtLine (1).ipynb  ArtLine(Try_it_on_Colab).ipynb  ArtLine.ipynb  Basics.md  CenterNet.md  FPN.md  Fast R-CNN.md  Faster RCNN.md  Insightface.md  MTCNN.md  Mask RCNN.md  Metrics.md  Monodepth2.md  NAS-FPN.md  Neural Style.md  R-CNN.md  R-FCN.md  SSD.md  (+25 more)
mobile/pytorch/cpp/example-app/: CMakeLists.txt  LibTorch.md  ME.md  example-app.cpp  ssh.md
my_utils/: #@param.md  .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore_and.md  .gitignore_py.md  .setup_vm_and_run_tests.sh  .travis.yml  AUTHORS.rst  CMakeLists.txt  Chinese.py  DL-lab.md  DistributedDataParallel.md  HISTORY.rst  Jenkinsfile  Jupyter_lab_laucher.bat  Kaggle.md  Loss.md  MANIFEST.in  MRE.md  Options.md  PR_score.md  README.rst  Template.md  Tensor.py  Test.md  VSimage.md  __init__.md  argparse.py  autoreload.md  awesome.md  awesomeicon.md  blog.md  checkpoint.md  checkpoint.py  circleci_config.yml  cite.md  colab_install.md  colabfiles.md  (+105 more)
my_utils/.github/: stale.yml
my_utils/.github/ISSUE_TEMPLATE/: bug_report.md
my_utils/.github/workflows/: unit_test.yml
my_utils/Docker/docker_bash/: start.sh
my_utils/Docker/docker_packages/: Dockerfile
my_utils/Docker/docker_pytorch/: Dockerfile
my_utils/bash/: config.md  install-conda.sh  try.ipynb
my_utils/colab/: colab2drive.md  colab_install.md  colab_java.md  colabconfig.md  gcs.md  tensorboardcolab.md
my_utils/tests/: __init__.py  conftest.py
my_utils/tests/travis/: run_test.sh  setup.sh
(+2152 files in other folders)
